fix(front): #3374 align table in people page
Former-commit-id: 52e338da56bb03a5b046abf65be2f873f29cfeac

--- a/new/theme/2020/static/scss/base.scss
+++ b/new/theme/2020/static/scss/base.scss
@@ -408,6 +408,9 @@ $codeyellow: rgba(230, 219, 116, 1);
   margin-left: auto;
   margin-right: auto;
   white-space: nowrap;
+  tbody tr {
+    text-align: center;
+  }
 }
 
 .internal {
